ags (2.1.40)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed resample of AgsAudioSignal and AgsWave only as needed
	* fixed realloc buffer size of AgsAudioSignal and AgsWave only as needed

ags (2.1.39)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed typo in functional-system-tests.mk.am

ags (2.1.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored ags_wave_find_point() to do bisect
	* added  unit-system-tests.mk.am

ags (2.1.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remove message monitor on AgsMachine implementation finalize

ags (2.1.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing seekable interface to AgsCaptureWaveChannelRun
	* fixed initial seek in AgsAudiorec
	* fixed wrong format during resample in ags_audio_signal.c
	* fixed wrong format during resample in ags_wave.c
	* fixed desktop-id in gsequencer.appdata.xml

ags (2.1.35)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsMachine signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsPad signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsLine signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsEffectBridge signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsEffectPad signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsEffectLine signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented emitting message of AgsAudio's samplerate, buffer-size and format change
	* implemented emitting message of AgsChannel's samplerate, buffer-size and format change
	* implemented proper resample of AgsAudioSignal as adjusting buffer size and samplerate
	* implemented proper resample of AgsWave as adjusting buffer size and samplerate